5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1876_1598.log
== TEST (2019-07-03 18:10:32) 
-- CODE:
from numpy import*

compra=array(eval(input("compras: ")))
print(compra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:15:18) 
-- CODE:
from numpy import*

compra=array(eval(input("compras: ")))
zeros=zeros(compra, dtype=float)


print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:15:50) 
-- CODE:
from numpy import*

compra=array(eval(input("compras: ")))
zeros=zeros(compra, dtype=float)


print(compra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:16:11) 
-- CODE:
from numpy import*

compra=array(eval(input("compras: ")))
zeros=zeros(compra, dtype=int)


print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:20:59) 
-- CODE:
from numpy import*

compra=array(eval(input("compras: ")))
zeros=zeros(compra, dtype=int)
aux=sum(compras)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(sum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:21:19) 
-- CODE:
from numpy import*

compra=array(eval(input("compras: ")))
zeros=zeros(compra, dtype=int)
aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(sum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:22:28) 
-- CODE:
from numpy import*
from math import*
compra=array(eval(input("compras: ")))
zeros=zeros(compra, dtype=int)
aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(sum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:23:20) 
-- CODE:
from numpy import*
from math.import import*
compra=array(eval(input("compras: ")))
zeros=zeros(compra, dtype=int)
aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(sum)
-- ERROR:
File "XXXX", line 2
    from math.import import*
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:23:42) 
-- CODE:
from numpy.math import*
from math import*
compra=array(eval(input("compras: ")))
zeros=zeros(compra, dtype=int)
aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(sum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.math import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:24:39) 
-- CODE:
from numpy.linalg import*
from math import*
compra=array(eval(input("compras: ")))
zeros=zeros(compra, dtype=int)
aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(sum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy.linalg import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:24:55) 
-- CODE:
from numpy import*
from math import*
compra=array(eval(input("compras: ")))
zeros=zeros(compra, dtype=int)
aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(sum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:25:26) 
-- CODE:
from numpy import*
from math import*
compra=array(eval(input("compras: ")))
zeros=zeros(compra, dtype=int)
aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(sum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:25:32) 
-- CODE:
from numpy import*
from math import*
compra=array(eval(input("compras: ")))
zeros=zeros(compra, dtype=int)
aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(sum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:25:48) 
-- CODE:
from numpy import*
from math import*
compra=array(eval(input("compras: ")))
zeros=zeros(compra, dtype=int)
aux=max(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(sum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:25:59) 
-- CODE:
from numpy import*
from math import*
compra=array(eval(input("compras: ")))
zeros=zeros(compra, dtype=int)
aux=max(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(sum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:29:16) 
-- CODE:
from numpy import*
from math import*
compra=array(eval(input("compras: ")))
zeros=zeros(compra, dtype=int)
aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(sum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:30:25) 
-- CODE:
from numpy import*
from math import*
compra=array(eval(input(int("compras: "))))
zeros=zeros(compra, dtype=int)
aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(sum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:30:46) 
-- CODE:
from numpy import*
from math import*
compra=array(eval(int(input("compras: "))))
zeros=zeros(compra, dtype=int)
aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(sum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:31:27) 
-- CODE:
from numpy import*
from math import*
compra=array(eval(float(input("compras: "))))
zeros=zeros(compra, dtype=int)
aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(sum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:31:59) 
-- CODE:
from numpy import*
from math import*
compra=array(int(input("compras: ")))
zeros=zeros(compra, dtype=int)
aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(sum)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:32:10) 
-- CODE:
from numpy import*
from math import*
compra=array(int(input("compras: ")))
zeros=zeros(compra, dtype=int)
aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(compra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:33:29) 
-- CODE:
from numpy import*
from math import*
compra=int(input("compras: "))
zeros=zeros(compra, dtype=int)
aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(compra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:33:46) 
-- CODE:
from numpy import*
from math import*
compra=input(int("compras: "))
zeros=zeros(compra, dtype=int)
aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(compra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:33:48) 
-- CODE:
from numpy import*
from math import*
compra=input(int("compras: "))
zeros=zeros(compra, dtype=int)
aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(compra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:34:03) 
-- CODE:
from numpy import*
from math import*
compra=int(input("compras: "))
zeros=zeros(compra, dtype=int)
aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(compra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:34:32) 
-- CODE:
from numpy import*
from math.numpy import*
compra=int(input("compras: "))
zeros=zeros(compra, dtype=int)
aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(compra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:34:48) 
-- CODE:
from numpy import*
from math import*
compra=array(int(input("compras: ")))
zeros=zeros(compra, dtype=int)
aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(compra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:35:17) 
-- CODE:
from numpy import*
from math import*
compra=array(input("compras: "))
zeros=zeros(compra, dtype=int)
aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(compra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:35:32) 
-- CODE:
from numpy import*
from math import*
compra=array(input("compras: "))

aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(compra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:35:48) 
-- CODE:
from numpy import*
from math import*
compra=array(eval(input("compras: ")))

aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(compra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:36:10) 
-- CODE:
from numpy import*
from math import*
compra=array(eval(input("compras: "))).dtype=int

aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(compra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:36:28) 
-- CODE:
from numpy import*
from math import*
compra=array(eval(input("compras: "))).dtype=int

aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(compra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:36:37) 
-- CODE:
from numpy import*
from math import*
compra=array(eval(input("compras: ")))

aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(compra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:41:49) 
-- CODE:
from numpy import*
from math import*
compra=array(eval(input("compras: ")))

aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(compra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:42:19) 
-- CODE:
from numpy import*
from math import*
compra=eval(input("compras: "))

aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(compra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:42:52) 
-- CODE:
from numpy import*
from math import*
compra=eval(int(input("compras: ")))

aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(compra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:43:01) 
-- CODE:
from numpy import*
from math import*
compra=eval(int(input("compras: ")))

aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(compra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:43:27) 
-- CODE:
from numpy import*
from math import*
compra=array(eval(int(input("compras: "))))

aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(compra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:43:54) 
-- CODE:
from numpy import*
from math import*
compra=eval(int(input("compras: ")))

aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(compra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:44:03) 
-- CODE:
from numpy import*
from math import*
compra=eval(input("compras: ")))

aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(compra)
-- ERROR:
File "XXXX", line 3
    compra=eval(input()))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:44:08) 
-- CODE:
from numpy import*
from math import*
compra=eval(input("compras: ")))

aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(compra)
-- ERROR:
File "XXXX", line 3
    compra=eval(input()))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:44:10) 
-- CODE:
from numpy import*
from math import*
compra=eval(input("compras: "))

aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(compra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:44:17) 
-- CODE:
from numpy import*
from math import*
compra=eval(input("compras: "))

aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(compra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:44:43) 
-- CODE:
from numpy import*
from math import*
compra=eval(input("compras: "))

aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:45:10) 
-- CODE:
from numpy import*
from math import*
compra=eval(input("compras: "))

aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		compra=compra-5
	
print(compra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:46:00) 
-- CODE:
from numpy import*
from math import*
compra=eval(input("compras: "))

aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		aux=compra-5
	
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:46:36) 
-- CODE:
from numpy import*
from math import*
compra=eval(input("compras: "))

aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		aux=aux-5
	
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:46:40) 
-- CODE:
from numpy import*
from math import*
compra=eval(input("compras: "))

aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		aux=aux-5
	
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 18:47:15) 
-- CODE:
from numpy import*
from math import*
compra=eval(input("compras: "))

aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		aux=aux-5
	
print(aux)
-- EXECUTION TIME:
0.83723
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
68.52000000000001
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
131.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
21
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:47:17) 
-- CODE:
from numpy import*
from math import*
compra=eval(input("compras: "))

aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		aux=aux-5
	
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:47:53) 
-- CODE:
from numpy import*
from math import*
compra=eval(float(input("compras: ")))

aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		aux=aux-5
	
print(compra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:48:20) 
-- CODE:
from numpy import*
from math import*
compra=eval(input("compras: "))

aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		aux=aux-5
	
print(compra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:49:02) 
-- CODE:
from numpy import*
from math import*
compra=eval(input("compras: "))

aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		aux=aux-5
	
print(compra)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:49:10) 
-- CODE:
from numpy import*
from math import*
compra=eval(input("compras: "))

aux=sum(compra)

for i in compra:
	if (i >= 8 ):
		aux=aux-5
	
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:49:47) 
-- CODE:
from numpy import*
from math import*
compra=eval(input("compras: "))

aux=sum(compra)

for i in compra:
	if (i >= 80 ):
		aux=aux-5
	
print(aux)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:50:10) 
-- CODE:
from numpy import*
from math import*
compra=eval(input("compras: "))

aux=sum(compra)

for i in compra:
	if (i >= 80 ):
		aux=aux-5
	
print(round(aux, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 18:50:25) 
-- CODE:
from numpy import*
from math import*
compra=eval(input("compras: "))

aux=sum(compra)

for i in compra:
	if (i >= 80 ):
		aux=aux-5
	
print(round(aux, 2))
-- EXECUTION TIME:
1.05972
-- TEST CASE 1:
---- input:
[11.32,40.2,32,0]
---- correct output:
83.52
---- user output:
83.52
-- TEST CASE 2:
---- input:
[32,44,32.1,43.2]
---- correct output:
151.3
---- user output:
151.3
-- TEST CASE 3:
---- input:
[23,2,1]
---- correct output:
26
---- user output:
26
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
